--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   ],
   "dependencies": {
     "got": "^9.6.0",
+    "moment": "2.11.1",
+    "nsp": "^3.2.1",
     "registry-auth-token": "^3.3.2",
     "registry-url": "^4.0.0",
     "semver": "^5.6.0"
