--- a/package.json
+++ b/package.json
@@ -1,45 +1,41 @@
 {
-  "name": "package-json",
-  "version": "6.0.0",
-  "description": "Get metadata of a package from the npm registry",
-  "license": "MIT",
-  "repository": "sindresorhus/package-json",
-  "author": {
-    "name": "Sindre Sorhus",
-    "email": "sindresorhus@gmail.com",
-    "url": "sindresorhus.com"
-  },
-  "engines": {
-    "node": ">=8"
-  },
+  "name": "redux-simple-starter",
+  "version": "1.0.0",
+  "description": "Simple starter package for Redux with React and Babel support",
+  "main": "index.js",
+  "repository": "git@github.com:StephenGrider/ReduxSimpleStarter.git",
   "scripts": {
-    "test": "xo && ava"
+    "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js --host 0.0.0.0 --port 8084 --public 142.93.61.207 --disable-host-check",
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js --recursive ./test",
+    "test:watch": "npm run test -- --watch",
+    "build": "webpack -p --define process.env.NODE_ENV='\"production\"' --progress --colors"
   },
-  "files": [
-    "index.js"
-  ],
-  "keywords": [
-    "npm",
-    "registry",
-    "package",
-    "pkg",
-    "package.json",
-    "json",
-    "module",
-    "scope",
-    "scoped"
-  ],
-  "dependencies": {
-    "got": "^9.6.0",
-    "moment": "2.11.1",
-    "nsp": "^3.2.1",
-    "registry-auth-token": "^3.3.2",
-    "registry-url": "^4.0.0",
-    "semver": "^5.6.0"
-  },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "ava": "^1.2.0",
-    "mock-private-registry": "^1.1.2",
-    "xo": "^0.24.0"
+    "@hawkeyesec/scanner-cli": "^1.4.0",
+    "babel-core": "^6.2.1",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
+    "webpack": "^1.12.9",
+    "webpack-dev-server": "^1.14.0"
+  },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "axios-retry": "^3.1.1",
+    "babel-preset-stage-1": "^6.1.18",
+    "classnames": "^2.2.6",
+    "css-loader": "^2.1.0",
+    "formik": "^1.4.2",
+    "fusioncharts": "^3.13.3-sr.1",
+    "json-loader": "^0.5.7",
+    "lodash": "^3.10.1",
+    "moment": "^2.23.0",
+    "prop-types": "^15.6.2",
+    "react": "16.3.2",
+    "react-autosuggest": "^9.4.3",
+    "react-avatar": "^3.5.0",
+
   }
 }
