--- a/package.json
+++ b/package.json
@@ -36,6 +36,25 @@
     "react": "16.3.2",
     "react-autosuggest": "^9.4.3",
     "react-avatar": "^3.5.0",
-
+    "react-browser-router": "^2.1.2",
+    "react-datepicker": "^2.1.0",
+    "react-dom": "16.3.2",
+    "react-dropzone": "^8.0.4",
+    "react-fontawesome": "^1.6.1",
+    "react-fusioncharts": "^3.0.0",
+    "react-gravatar": "^2.6.3",
+    "react-infinite-scroll-component": "^4.5.0",
+    "react-markdown": "^4.0.4",
+    "react-redux": "5.0.7",
+    "react-router-dom": "^4.3.1",
+    "react-tag-autocomplete": "^5.8.0",
+    "react-tagsinput": "^3.19.0",
+    "react-textarea-autosize": "^7.1.0",
+    "react-timeago": "^4.3.0",
+    "react-toastify": "^4.5.1",
+    "reactstrap": "^7.0.2",
+    "redux": "4.0.0",
+    "style-loader": "^0.23.1",
+    "yup": "^0.26.6"
   }
 }
